Prevent Badger from getting squished on iOS
Fixes https://github.com/redbadger/react.london/issues/191

--- a/shared/components/SiteFooter/index.scss
+++ b/shared/components/SiteFooter/index.scss
@@ -97,6 +97,7 @@
 
 .SiteFooter__badger {
   height: 40px;
+  width: 33px;
   margin-bottom: 12px;
 }
 
